--- a/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
@@ -91,10 +91,10 @@
         {% if node.hasField('field_nombre_comun') %}
             <h2 class="title tw-mt-10 tw-mb-6">{{ content.field_nombre_comun }}</h2>
         {% endif %}
-        <div class="tw-flex tw-flex-wrap tw-overflow-hidden tw-bg-gray-650">
-            <div class="tw-w-4/12 tw-overflow-hidden tw-flex tw-items-center tw-text-white">
+        <div class="tw-flex tw-flex-wrap tw-overflow-hidden tw-bg-gray-650 tw-py-4 tw-px-8">
+            <div class="tw-w-4/12 tw-overflow-hidden tw-flex tw-items-center tw-text-white tw-pr-6 border-r-2 border-gray-400">
                 <div>{{ content.field_image }}</div>
-                <div class="ml-6">
+                <div class="ml-6 tw-text-sm">
                     <div><strong>{{ node.field_ciudad.fieldDefinition.label }}</strong>: {{ node.field_ciudad.value }}</div>
                     <div><strong>{{ node.field_fundacion.fieldDefinition.label }}</strong>: {{ node.field_fundacion.value }}</div>
                     <div><strong>{{ node.field_estadio.fieldDefinition.label }}</strong>: {{ node.field_estadio.value }}</div>
@@ -104,8 +104,8 @@
                     <div><strong>{{ node.field_pretitle.fieldDefinition.label }}</strong>: {{ node.field_pretitle.value }}</div>
                 </div>
             </div>
-            <div class="tw-w-8/12 tw-overflow-hidden">
-                <div class="body tw-text-white">{{ content.body }}</div>
+            <div class="tw-w-7/12 tw-overflow-hidden tw-ml-6">
+                <div class="body tw-text-white tw-text-sm tw-leading-none">{{ content.body }}</div>
             </div>
         </div>
 </article>
