--- a/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
@@ -91,8 +91,8 @@
         {% if node.hasField('field_nombre_comun') %}
             <h2 class="title tw-mt-10 tw-mb-6">{{ content.field_nombre_comun }}</h2>
         {% endif %}
-        <div class="tw-flex tw-flex-wrap tw-overflow-hidden tw-bg-gray-650 tw-py-4 tw-px-8">
-            <div class="tw-w-4/12 tw-overflow-hidden tw-flex tw-items-center tw-text-white tw-pr-6 border-r-2 border-gray-400">
+        <div class="tw-flex tw-flex-wrap tw-overflow-hidden tw-bg-gray-650 tw-py-4 tw-px-8 tw-mb-8">
+            <div class="tw-w-4/12 tw-overflow-hidden tw-flex tw-items-center tw-text-white tw-pr-6 border-r-2 border-gray-400 tw-my-4">
                 <div>{{ content.field_image }}</div>
                 <div class="ml-6 tw-text-sm">
                     <div><strong>{{ node.field_ciudad.fieldDefinition.label }}</strong>: {{ node.field_ciudad.value }}</div>
