--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -97,7 +97,7 @@
 }
 #block-views-block-nomina-block-1{
   h2{
-    @apply tw-m-10;
+    @apply mb-10;
   }
   display: inline-block;
   .img-jugador{
