--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -107,3 +107,13 @@
     margin-bottom: .5rem;
   }
 }
+#block-views-block-videos-block-2{
+  h2{
+    @apply mb-10;
+  }
+}
+#block-views-block-noticias-block-1{
+    h2{
+    @apply mb-10;
+  }
+}
