--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -96,6 +96,7 @@
   }
 }
 #block-views-block-nomina-block-1{
+  @apply my-8;
   h2{
     @apply mb-10;
   }
@@ -108,11 +109,13 @@
   }
 }
 #block-views-block-videos-block-2{
+  @apply my-8;
   h2{
     @apply mb-10;
   }
 }
 #block-views-block-noticias-block-1{
+  @apply my-8;
     h2{
     @apply mb-10;
   }
