--- a/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
@@ -101,7 +101,7 @@
                     <div><strong>{{ node.field_presidente.fieldDefinition.label }}</strong>: {{ node.field_presidente.value }}</div>
                     <div><strong>{{ node.field_director_tecnico.fieldDefinition.label }}</strong>: {{ node.field_director_tecnico.value }}</div>
                     <div><strong>{{ node.field_mediastream.fieldDefinition.label }}</strong>: {{ node.field_mediastream.value }}</div>
-                    <div><strong>{{ node.field_pretitle.fieldDefinition.label }}</strong>: {{ node.field_pretitle.value }}</div>
+                    <div><strong>{{ node.field_pretitle.value }}</strong></div>
                 </div>
             </div>
             <div class="tw-w-7/12 tw-overflow-hidden tw-ml-6">
