scss views.scss

--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -100,13 +100,13 @@
   h2{
     @apply mb-10;
   }
-  display: inline-block;
+/*   display: inline-block;
   .img-jugador{
     width: 8.333333%;
     min-height: 140px;
     float: left;
     margin-bottom: .5rem;
-  }
+  } */
 }
 #block-views-block-videos-block-2{
   @apply my-8 pb-8;
