--- a/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
@@ -20,9 +20,9 @@
             <h2 class="title tw-mt-10 tw-mb-6">{{ content.field_nombre_comun }}</h2>
         {% endif %}
         <div class="tw-grid tw-grid-cols-12 tw-bg-gray-650 p-10">
-            <div class="tw-grid grid-cols-12 col-span-4 tw-items-center tw-text-white">
-                <div class="col-span-4">{{ content.field_image }}</div>
-                <div class="col-span-8 tw-text-sm">
+            <div class="tw-grid grid-cols-12 col-span-5 tw-items-center tw-text-white">
+                <div class="col-span-3">{{ content.field_image }}</div>
+                <div class="col-span-8 tw-text-sm border-r-2 border-gray-400">
                     <div><strong>{{ node.field_ciudad.fieldDefinition.label }}</strong>: {{ node.field_ciudad.value }}</div>
                     <div><strong>{{ node.field_fundacion.fieldDefinition.label }}</strong>: {{ node.field_fundacion.value }}</div>
                     <div><strong>{{ node.field_estadio.fieldDefinition.label }}</strong>: {{ node.field_estadio.value }}</div>
@@ -32,7 +32,7 @@
                     <div><strong>{{ node.field_pretitle.value }}</strong></div>
                 </div>
             </div>
-            <div class="col-span-8">
+            <div class="col-span-7">
                 <div class="body tw-text-white tw-text-sm">{{ content.body }}</div>
             </div>
         </div>
