--- a/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
@@ -19,10 +19,10 @@
         {% if node.hasField('field_nombre_comun') %}
             <h2 class="title tw-mt-10 tw-mb-6">{{ content.field_nombre_comun }}</h2>
         {% endif %}
-        <div class="tw-grid tw-grid-cols-12 tw-bg-gray-650 p-10">
+        <div class="md:tw-grid md:tw-grid-cols-12 tw-bg-gray-650 p-8 md:p-10">
             <div class="tw-grid grid-cols-12 col-span-5 tw-items-center tw-text-white">
-                <div class="col-span-3">{{ content.field_image }}</div>
-                <div class="col-span-8 tw-text-sm border-r-2 border-gray-400">
+                <div class="col-span-4 md:col-span-3">{{ content.field_image }}</div>
+                <div class="col-span-8 md:col-span-8 tw-text-sm md:border-r-2 md:border-gray-400">
                     <div><strong>{{ node.field_ciudad.fieldDefinition.label }}</strong>: {{ node.field_ciudad.value }}</div>
                     <div><strong>{{ node.field_fundacion.fieldDefinition.label }}</strong>: {{ node.field_fundacion.value }}</div>
                     <div><strong>{{ node.field_estadio.fieldDefinition.label }}</strong>: {{ node.field_estadio.value }}</div>
