--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -72,6 +72,13 @@
   }
 }
 .blocktabs{
+  @apply mb-4;
+  .ui-tabs-panel{
+    @apply bg-gray;
+    .views-row{
+      @apply mb-4 bg-primary text-white;
+    }
+  }
   &.ui-widget-content{
     @apply border-0;
   }
@@ -85,7 +92,10 @@
     @apply border-0 bg-transparent rounded-none p-0 flex flex-no-wrap;
     .ui-tabs-tab{
       font-family: $font-title;
-      @apply bg-gray-650 m-0 text-white;
+      @apply bg-gray-650 m-0 text-white border-0 rounded-none flex-1;
+      a{
+        @apply text-white tw-w-full text-center py-4;
+      }
       &.ui-state-active{
         @apply bg-secondary p-0 m-0 border-0 rounded-none;
         a{
