--- a/web/modules/custom/optafeeds/components/horizontal_results/template.html
+++ b/web/modules/custom/optafeeds/components/horizontal_results/template.html
@@ -15,7 +15,7 @@
             <small v-else-if="match.period != 'TBC' && match.date != 0 && match.period != 'Postponed'">{{ match.date | formatDate | capitalize }}, {{ match.date | formatHour }}</small>
             <small v-else>{{ match.date | formatDate | capitalize }} {{ match.period }}</small>
         </div>
-        <div class="flex items-center justify-center">
+        <div class="flex items-center justify-center mr-10 md:mr-0">
             <a href="/partidos" class="flex">
             <img src="/sites/default/files/widgets/play_button.png" alt="Resumen">
             <span class="pl-1 text-xs font-medium title-color">Resumen</span>
