--- a/web/modules/custom/optafeeds/components/horizontal_results/template.html
+++ b/web/modules/custom/optafeeds/components/horizontal_results/template.html
@@ -1,6 +1,6 @@
-<div class="overflow-y-hidden whitespace-no-wrap">
+<div class="sm:overflow-y-hidden sm:whitespace-no-wrap">
     <div class="flex" v-if="!loading && matches">
-        <div class="flex-1 text-center" v-for="match in matches">
+        <div class="flex-1 text-center mr-10 md:mr-0" v-for="match in matches">
             <div class="flex justify-center">
                 <img class="mr-2" :src="'//secure.omo.akamai.opta.net/image.php?secure=true&h=secure.omo.akamai.opta.net&sport=football&entity=team&description=badges&dimensions=20&id='+ match.home.id" :alt="match.home.name" :title="match.home.name">
                 <div class="font-bold" :class="match.period == 'FullTime'?'text-red-700':'text-gray-500'">
@@ -16,7 +16,7 @@
                 <small v-else-if="match.period != 'TBC' && match.date != 0 && match.period != 'Postponed'">{{ match.date | formatDate | capitalize }}, {{ match.date | formatHour }}</small>
                 <small v-else>{{ match.date | formatDate | capitalize }} {{ match.period }}</small>
             </div>
-            <div class="flex items-center justify-center mr-10 md:mr-0">
+            <div class="flex items-center justify-center">
                 <a href="/partidos" class="flex">
                 <img src="/sites/default/files/widgets/play_button.png" alt="Resumen">
                 <span class="pl-1 text-xs font-medium title-color">Resumen</span>
