--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -124,11 +124,11 @@
     {% if page.footer %}
         <div class="tw-p-4 tw-bg-gray">
             <div class="tw-container tw-mx-auto tw-p-2">
-                <div class="tw-flex tw-justify-between tw-items-center">
+                <div class="md:tw-flex tw-justify-between tw-items-center">
                     <div class="title tw-text-5xl">Patrocinadores</div>
                     <div class="tw-flex tw-items-center">
                         <div class="tw-p-4 tw-text-center tw-font-bold">
-                            <img src="/themes/custom/tailwindcss/images/sponsors/nikee.png" alt="Nike">
+                            <img src="/themes/custom/tailwindcss/images/sponsors/nike.png" alt="Nike">
                             NIKE sin excusas
                         </div>
                         <div class="tw-p-4 tw-text-center">
