--- a/web/themes/custom/tailwindcss/templates/block/block--views-block--videos-block-2.html.twig
+++ b/web/themes/custom/tailwindcss/templates/block/block--views-block--videos-block-2.html.twig
@@ -31,9 +31,9 @@
     <h2{{ title_attributes }}>{{ label }}</h2>
   {% endif %}
   {{ title_suffix }}
-  {% block content %}
+  <div class="videos">
+  	{% block content %}
+  </div>
     {{ content }}
   {% endblock %}
 </div>
-
-<h2>ENTROOOOOOOOOOOOOO</h2>
