--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -135,3 +135,9 @@
     @apply mb-10;
   }
 }
+
+@screen md {
+  #block-views-block-videos-block-2 .contextual-region {
+    @apply bg-blue-700;
+  }
+}
