--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -136,8 +136,8 @@
   }
 }
 
-/* @screen md {
+@screen sm {
   #block-views-block-videos-block-2 .contextual-region {
     @apply bg-blue-700;
   }
-} */
+}
