--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -127,6 +127,21 @@
     h2{
     @apply mb-10;
   }
+  li.pager__item{
+    display: inline-block;
+    white-space: nowrap;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    clear: both;
+    background-color: #0ef8c3;
+    color: #0b3b41;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    width: 16rem;
+    margin-top: 1rem;
+  }
 }
 
 @screen md {
@@ -142,15 +157,12 @@
       }
     }
   }
-  .block-views-block-noticias-block-1{
+  #block-views-block-noticias-block-1{
     .md--col--4{
       @apply flex flex-wrap;
       .views-row{
         width: 25%;
         padding: .5rem;
-      }
-      li.pager__item{
-        @apply more-link;
       }
     }
   }
