--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -257,7 +257,7 @@
     .md--col--2{
       @apply flex flex-wrap;
       .views-row{
-        @apply w-6/12;
+        @apply w-6/12 p-2;
       }
     }
   }
