--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -253,7 +253,22 @@
       }
     }
   }
+  #block-positionstableswidget-2{
+    @apply w-6/12;
+  }
   #block-views-block-videos-block-3{
+    @apply w-6/12;
+    @apply float-left;
+    .md--col--2{
+      @apply flex flex-wrap;
+      .views-row{
+        @apply w-6/12 p-2;
+      }
+    }
+  }
+  #block-views-block-noticias-block-2{
+    @apply w-6/12;
+    @apply float-left;
     .md--col--2{
       @apply flex flex-wrap;
       .views-row{
