--- a/web/themes/custom/tailwindcss/src/sass/app.scss
+++ b/web/themes/custom/tailwindcss/src/sass/app.scss
@@ -11,5 +11,6 @@ $font-title: 'Passion One', cursive;
 @import "menu";
 @import "views";
 @import "widgets";
+@import "user";
 
 @tailwind utilities;
