--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -74,7 +74,7 @@
 
     {{ page.help }}
 
-    <main role="main">
+    <main role="main" class="{{ is_front ? 'front-page':'' }}">
         <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
         <div>
             {{ page.fullcontent }}
@@ -85,11 +85,11 @@
                     {{ page.sidebar_first }}
                 </aside>
             {% endif %}
-            <div class="md:tw-flex-1 tw-p-4">
+            <div class="md:tw-w-2/3 tw-p-4">
                 {{ page.content }}
             </div>{# /.layout-content #}
             {% if page.sidebar_second %}
-                <aside class="md:tw-w-1/4" role="complementary">
+                <aside class="md:tw-w-1/3" role="complementary">
                     {{ page.sidebar_second }}
                 </aside>
             {% endif %}
@@ -113,7 +113,7 @@
                         {{ page.postcontent_sidebar }}
                     </aside>
                 {% endif %}
-                <div class="md:tw-flex-1 tw-p-4">
+                <div class="md:tw-w-2/3 tw-p-4">
                     {{ page.postcontent2 }}
                 </div>
             </div>
