--- a/web/themes/custom/tailwindcss/templates/node/node--galeria--home-destacado.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--galeria--home-destacado.html.twig
@@ -1,13 +1,10 @@
-<div class="article home-destacado flex" {{ attributes.addClass(classes) }}>
+<div class="galeria home-destacado flex" {{ attributes.addClass(classes) }}>
     <div class="image tw-w-3/5">
         {% if node.hasField('field_image') %}
             {{ content.field_image }}
         {% endif %}
     </div>
     <div class="ml-4">
-        {% if node.hasField('field_category') %}
-            <div class="torneo category">{{ content.field_category }}</div>
-        {% endif %}
         <div class="title max-w-xl"><a href="{{ url }}">{{ label }}</a></div>
         <div class="lead tw-my-4">{{ content.field_lead }}</div>
         <div class="published_date">{{ node.getCreatedTime() | format_date('complete_date') }}</div>
