--- a/web/themes/custom/tailwindcss/templates/node/node--galeria--teaser.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--galeria--teaser.html.twig
@@ -1,12 +1,9 @@
-<div class="article teaser" {{ attributes.addClass(classes) }}>
+<div class="galeria teaser" {{ attributes.addClass(classes) }}>
     <div class="image">
         {% if node.hasField('field_image') %}
             {{ content.field_image }}
         {% endif %}
     </div>
-    {% if node.hasField('field_category') %}
-        <div class="torneo category my-2">{{ content.field_category }}</div>
-    {% endif %}
     <div class="tw-text-sm">
         <a href="{{ url }}">{{ label }}</a>
     </div>
