--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido--teaser.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido--teaser.html.twig
@@ -1,11 +1,14 @@
-<div class="article teaser">
+<div class="gol-partido teaser" {{ attributes.addClass(classes) }}>
     <div class="tw-flex tw-items-top">
-        <div class="image w-1/2">
+        <div class="image tw-w-1/2 tw-relative">
             {% if node.hasField('field_image_h') %}
                 {{ content.field_image_h }}
             {% elseif node.hasField('field_image') %}
                 {{ content.field_image }}
             {% endif %}
+            <div class="tw-absolute tw-top-0 tw-left-0 play-icon tw-w-full tw-h-full tw-flex tw-items-center tw-justify-center">
+                <a href="{{ url }}"><img src="/themes/custom/tailwindcss/images/icons/play.png" alt="Play" class="play-icon tw-h-12 tw-w-12 opacity-100"></a>
+            </div>
         </div>
         <div class="tw-w-1/2 tw-text-sm tw-pl-2">
             <a href="{{ url }}">{{ label }}</a>
