--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -84,10 +84,14 @@
                 <aside class="md:tw-w-1/3 tw-p-4" role="complementary">
                     {{ page.sidebar_first }}
                 </aside>
-            {% endif %}
-            <div class="md:tw-w-2/3 tw-p-4">
+                <div class="md:tw-w-2/3 tw-p-4">
                 {{ page.content }}
-            </div>{# /.layout-content #}
+                </div>{# /.layout-content #}
+            {% else %}
+                <div class="tw-p-4 tw-flex-1">
+                {{ page.content }}
+                </div>{# /.layout-content #}
+            {% endif %}
             {% if page.sidebar_second %}
                 <aside class="md:tw-w-1/3" role="complementary">
                     {{ page.sidebar_second }}
