--- a/web/modules/custom/optafeeds/components/widget_positions/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions/template.html
@@ -1,11 +1,11 @@
 <div class="opta-widgets" style="background-color: #ededed;">
     <div class="p-4">
-        <select class="m-0" @change="loadTable" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
+        <select class="m-0 w-full" @change="loadTable" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
             <option :value="tour.field_opta_id + '-' + tour.field_opta_season" v-for="tour in tournaments">{{ tour.title }}</option>
         </select>    
     </div>
     <div class="flex flex-no-wrap overflow-x-auto w-full">
-        <div @click="selectOption(option.key)" v-for="option in options" class="py-3 px-6 font-title font-semibold cursor-pointer table-option" :class="selected_option == option.key?'active':''">{{ option.label }}</div>
+        <div @click="selectOption(option.key)" v-for="option in options" class="py-3 px-6 font-title cursor-pointer table-option" :class="selected_option == option.key?'active':''">{{ option.label }}</div>
     </div>
     <div class="flex " style="background-color: #0ef8c3;" v-if="phases">
         <div @click="selectPhase(phase.phase.id)" v-for="phase in phases" v-if="phase.teams && Object.keys(phase.teams).length" class="cursor-pointer phase p-2" :class="selected_phase_id == phase.phase.id?'active':''">
