--- a/web/themes/custom/tailwindcss/src/sass/_texts.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_texts.scss
@@ -1,11 +1,17 @@
 h2, .title {
   font-family: $font-title;
-  @apply tw-text-4xl;
-  @apply tw-text-primary tw-tracking-wide tw-leading-none;
+  @apply tw-text-4xl mb-8;
+  @apply tw-text-primary tw-leading-none;
+}
+
+.title-article {
+  font-family: $font-title;
+  @apply tw-text-4xl mb-4;
+  @apply tw-text-primary tw-leading-none;
 }
 
 h2 {
-  @apply uppercase mb-2;
+  @apply uppercase;
 }
 
 h3.title {
@@ -19,7 +25,7 @@ a {
 .category {
   @apply mb-2;
   a {
-    @apply text-primary uppercase text-sm flex items-center;
+    @apply text-primary uppercase text-xs flex items-center;
     &::before {
       display: inline-block;
       content: ' ';
