--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -46,7 +46,7 @@
  */
 #}
 <div class="tw-bg-primary">
-    <div class="tw-container tw-mx-auto tw-p-2">
+    <div class="tw-container tw-mx-auto tw-p-4">
         {{ page.secondary_menu }}
         <div class="tw-flex tw-items-center tw-my-3">
             <div>
@@ -60,12 +60,12 @@
 </div>
 {% if page.breadcrumb %}
     <div class="tw-p-4 tw-bg-gray">
-        <div class="tw-container tw-mx-auto tw-p-2">
+        <div class="tw-container tw-mx-auto tw-px-4">
             {{ page.breadcrumb }}
         </div>
     </div>
 {% endif %}
-<div class="tw-container tw-mx-auto tw-p-4">
+<div class="tw-container tw-mx-auto tw-py-12 tw-px-4">
     {% if messages %}
         <div class="help tw-p-2 tw-bg-green-200 tw-text-primary tw-border-primary tw-border tw-text-sm tw-m-2">
             {{ page.highlighted }}
