--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido--teaser.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido--teaser.html.twig
@@ -10,7 +10,7 @@
                 <a href="{{ url }}"><img src="/themes/custom/tailwindcss/images/icons/play.png" alt="Play" class="play-icon tw-h-12 tw-w-12 opacity-100"></a>
             </div>
         </div>
-        <div class="tw-w-1/2 tw-text-sm tw-pl-2">
+        <div class="tw-w-1/2 tw-text-base tw-pl-2">
             <a href="{{ url }}">{{ label }}</a>
         </div>
     </div>
